--- a/googlecode.css
+++ b/googlecode.css
@@ -6,7 +6,7 @@ Google Code style (c) Aahan Krish <geekpanth3r@gmail.com>
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: white;
+  background: #f1f1f1;
   color: black;
 }
 
