--- a/googlecode.css
+++ b/googlecode.css
@@ -94,3 +94,5 @@ pre[data-codetype="JavaScript"]:before{background-color:#ff6c60 !important;}
 pre[data-codetype="JavaScript"]{border-left:3px solid #ff6c60 !important;}
 pre[data-codetype="JQuery"]:before{background-color:#99c262 !important;}
 pre[data-codetype="JQuery"]{border-left:3px solid #99c262 !important;}
+pre[data-codetype="C"]:before{background-color:#99c262 !important;}
+pre[data-codetype="C"]{border-left:3px solid #99c262 !important;}
